k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  type: ClusterIP

  selector:
    app: homepage

  ports:
    - port: 80
      targetPort: 80
